# learnclock

./: .dev.env  .gitignore  .prod.env  Makefile  alembic.ini  dependency.py  docker-compose.yaml  exception.py  gunicorn.conf.py  main.py  pyproject.toml  requirements.txt  settings.py
alembic/: env.py
alembic/versions/: 1eb963dcce28_make_access_nullable.py  27d5f69c6ff8_init.py  381a0f5b8961_remove_nullable_types.py  41e17204e516_remove_access_token_field.py  50a215130869_add_user_id_to_taskdb.py  81587e545077_google_auth.py  e610ecbd54f5_yd_access_token.py  e98879c5329f_user_init.py
app/: dependency.py  main.py  settings.py
app/cache/: __init__.py  accessor.py
app/client/: __init__.py  google.py  yandex.py
app/database/: __init__.py  accessor.py
app/database/models/: tasks.py  user.py
app/repository/: __init__.py  cache_task.py  task.py  user.py
app/routes/: __init__.py  auth.py  ping.py  tasks.py  users.py
app/schema/: __init__.py  task.py
app/service/: __init__.py  auth.py  task.py  user.py
cache/: __init__.py  accessor.py
client/: __init__.py  google.py  yandex.py
database/: __init__.py  accessor.py  database.py  models.py
database/models/: tasks.py  user.py
repository/: __init__.py  cache_task.py  task.py  user.py
routes/: __init__.py  auth.py  ping.py  tasks.py  users.py
schema/: __init__.py  auth.py  task.py  user.py
service/: __init__.py  auth.py  task.py  user.py
tests/: conftest.py
tests/fixtures/: settings.py
tests/fixtures/auth/: auth_service.py  clients.py
tests/fixtures/users/: user_model.py  user_repository.py
(+1 files in other folders)
