[tool.poetry]
name = "learnclock"
version = "0.1.0"
description = ""
authors = ["Vladimir Dybin <vladimir.dybin@masterdelivery.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.115.5"
uvicorn = "^0.32.0"
pydantic = "^2.9.2"
pydantic-settings = "^2.6.1"
alembic = "^1.14.0"
psycopg2 = "^2.9.10"
psycopg2-binary = "^2.9.10"
redis = "^5.2.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
response = "^0.5.0"
requests = "^2.32.3"
httpx = "^0.28.1"
asyncpg = "^0.30.0"
greenlet = "^3.1.1"
gunicorn = "^23.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

